--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">To-Do Lists</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="todo_empty">There is nothing.</string>
+    <string name="to_do_lists">To-do Lists</string>
+    <string name="button_add_todo">Button Add Todo</string>
+    <string name="finish">Selesai</string>
 </resources>
